objects/FT_Loan_Application__c.object
<CustomObject>
    <description>Associations between FT loan application, our customer contact, and vehicle information.</description>
    <fields>
        <fullName>FT_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>FT Number</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FT_Status__c</fullName>
        <label>FT Status</label>
        <picklist>
            <picklistValues>
                <fullName>Incomplete</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disbursed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Forcebase_Contact_ID__c</fullName>
        <externalId>true</externalId>
        <label>Forcebase_Contact_ID</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forcebase_Deal_ID__c</fullName>
        <externalId>true</externalId>
        <label>Forcebase_Deal_ID</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone_Number__c</fullName>
        <label>Mobile Phone Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Public_Token__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Public_Token</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>FT Loan Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FT Loan Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>